<resources>
    <string name="app_name">GPA_berat1_Calculator</string>
    <string name="course_1">Course 1</string>
    <string name="course_2">Course 2</string>
    <string name="course_3">Course 3</string>
    <string name="course_4">Course 4</string>
    <string name="course_5">Course 5</string>
    <string name="title">Enter Grades</string>
    <string name="answer">Final GPA</string>
    <string name="button">Press to Compute GPA</string>


</resources>