<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayout"
    tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".MainActivity"
                    tools:ignore="ScrollViewCount">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="323dp"
                            android:layout_height="57dp"
                            android:layout_marginTop="28dp"
                            android:text="@string/title"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:textColor="@android:color/black"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/editTextNumber2"
                            android:layout_width="119dp"
                            android:layout_height="39dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:ems="10"
                            android:hint="@string/course_2"
                            android:inputType="number"
                            app:layout_constraintBottom_toTopOf="@+id/editTextNumber3"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />


                        <EditText
                            android:id="@+id/editTextNumber"
                            android:layout_width="120dp"
                            android:layout_height="38dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="16dp"
                            android:ems="10"
                            android:hint="@string/course_1"
                            android:inputType="number"
                            app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView7" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="28dp"
                            android:text="@string/course_1"
                            app:layout_constraintEnd_toStartOf="@+id/editTextNumber"
                            app:layout_constraintHorizontal_bias="0.698"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView7" />


                        <EditText
                            android:id="@+id/editTextNumber3"
                            android:layout_width="122dp"
                            android:layout_height="42dp"
                            android:layout_marginTop="36dp"
                            android:ems="10"
                            android:hint="@string/course_3"
                            android:inputType="number"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/editTextNumber2" />

                        <EditText
                            android:id="@+id/editTextNumber4"
                            android:layout_width="120dp"
                            android:layout_height="43dp"
                            android:layout_marginBottom="44dp"
                            android:ems="10"
                            android:hint="@string/course_5"
                            android:inputType="number"
                            app:layout_constraintBottom_toTopOf="@+id/button"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <EditText
                            android:id="@+id/editTextNumber5"
                            android:layout_width="120dp"
                            android:layout_height="43dp"
                            android:layout_marginTop="32dp"
                            android:ems="10"
                            android:hint="@string/course_4"
                            android:inputType="number"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/editTextNumber3" />

                        <TextView
                            android:id="@+id/textView15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="52dp"
                            android:text="@string/course_2"
                            app:layout_constraintEnd_toStartOf="@+id/editTextNumber2"
                            app:layout_constraintHorizontal_bias="0.693"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView14" />

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="56dp"
                            android:text="@string/course_3"
                            app:layout_constraintEnd_toStartOf="@+id/editTextNumber3"
                            app:layout_constraintHorizontal_bias="0.701"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView15" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="48dp"
                            android:text="@string/course_4"
                            app:layout_constraintEnd_toStartOf="@+id/editTextNumber5"
                            app:layout_constraintHorizontal_bias="0.696"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView16" />

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="48dp"
                            android:layout_marginBottom="58dp"
                            android:text="@string/course_5"
                            app:layout_constraintBottom_toTopOf="@+id/button"
                            app:layout_constraintEnd_toStartOf="@+id/editTextNumber4"
                            app:layout_constraintHorizontal_bias="0.688"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView17"
                            app:layout_constraintVertical_bias="0.6" />

                        <Button
                            android:id="@+id/button"
                            android:layout_width="256dp"
                            android:layout_height="58dp"
                            android:layout_marginStart="162dp"
                            android:layout_marginTop="392dp"
                            android:layout_marginEnd="162dp"
                            android:text="@string/button"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:visibility="visible"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.502"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView7" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="419dp"
                            android:layout_height="32dp"
                            android:layout_marginTop="28dp"
                            android:text="@string/answer"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/button" />

                </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
</RelativeLayout>